Save hackernews titles in sqlite db

--- a/Hoarder/appsettings.json
+++ b/Hoarder/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Interval": {
+    "Duration": 24,
+    "Unit": "Hours"
   }
 }
