Remove server project

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/Cron/bin/Debug/net6.0/Cron.dll",
+            "program": "${workspaceFolder}/Hoarder/bin/Debug/net6.0/Hoarder.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/Cron",
+            "cwd": "${workspaceFolder}/Hoarder",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
