--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/Cron/Cron.csproj",
+                "${workspaceFolder}/Hoarder/Hoarder.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -19,7 +19,7 @@
             "type": "process",
             "args": [
                 "publish",
-                "${workspaceFolder}/Cron/Cron.csproj",
+                "${workspaceFolder}/Hoarder/Hoarder.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -33,7 +33,7 @@
                 "watch",
                 "run",
                 "--project",
-                "${workspaceFolder}/Cron/Cron.csproj"
+                "${workspaceFolder}/Hoarder/Hoarder.csproj"
             ],
             "problemMatcher": "$msCompile"
         }
