Fix nullable warnings

--- a/Hoarder/Hoarder.csproj
+++ b/Hoarder/Hoarder.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dotnet-Hoarder-9DD91894-0646-4095-AF78-7418C9F0CA8C</UserSecretsId>
   </PropertyGroup>
